completed 95% of project

--- a/GET FIT/GET FIT/Base.lproj/Main.storyboard
+++ b/GET FIT/GET FIT/Base.lproj/Main.storyboard
@@ -16,7 +16,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="631"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZO5-da-owx">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZO5-da-owx">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="631"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <subviews>
@@ -149,7 +149,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="976" y="132"/>
+            <point key="canvasLocation" x="964" y="-3"/>
         </scene>
         <!--Workout Screen-->
         <scene sceneID="HQd-rc-aYY">
@@ -163,19 +163,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="timerback" translatesAutoresizingMaskIntoConstraints="NO" id="21c-W3-Yh6">
-                                <rect key="frame" x="98" y="35" width="127" height="127"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Timer" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p92-tY-BaF">
-                                <rect key="frame" x="120" y="71" width="82" height="56"/>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p92-tY-BaF">
+                                <rect key="frame" x="123" y="71" width="82" height="56"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" alpha="0.10000000000000001" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="L5K-hu-WBw">
-                                <rect key="frame" x="98" y="35" width="127" height="127"/>
+                                <rect key="frame" x="97" y="33" width="127" height="127"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" image="pause">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -195,7 +191,7 @@
                                 <color key="highlightedColor" red="0.19215688109397888" green="0.20784315466880798" blue="0.24705883860588074" alpha="1" colorSpace="deviceRGB"/>
                             </label>
                             <button opaque="NO" tag="1" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1Ur-f5-ayv">
-                                <rect key="frame" x="44" y="84" width="15" height="26"/>
+                                <rect key="frame" x="53" y="84" width="15" height="26"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" image="back">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -205,7 +201,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" tag="2" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RvO-h2-1Pc">
-                                <rect key="frame" x="255" y="84" width="15" height="26"/>
+                                <rect key="frame" x="257" y="84" width="15" height="26"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" image="skip">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -214,6 +210,53 @@
                                     <action selector="onClick:" destination="L1Z-ts-MKY" eventType="touchUpInside" id="Rom-r6-oNy"/>
                                 </connections>
                             </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="notcomplete" translatesAutoresizingMaskIntoConstraints="NO" id="Fco-C6-j3I" userLabel="1">
+                                <rect key="frame" x="20" y="430" width="43" height="43"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="notcomplete" translatesAutoresizingMaskIntoConstraints="NO" id="QOH-7R-boc" userLabel="2">
+                                <rect key="frame" x="77" y="430" width="43" height="43"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="notcomplete" translatesAutoresizingMaskIntoConstraints="NO" id="pgv-xF-vLj" userLabel="3">
+                                <rect key="frame" x="139" y="430" width="43" height="43"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="notcomplete" translatesAutoresizingMaskIntoConstraints="NO" id="ygR-zA-maq" userLabel="4">
+                                <rect key="frame" x="200" y="430" width="43" height="43"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="notcomplete" translatesAutoresizingMaskIntoConstraints="NO" id="rve-Rb-0E1" userLabel="5">
+                                <rect key="frame" x="257" y="430" width="43" height="43"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="notcomplete" translatesAutoresizingMaskIntoConstraints="NO" id="UU2-pV-c5k" userLabel="6">
+                                <rect key="frame" x="20" y="495" width="43" height="43"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="notcomplete" translatesAutoresizingMaskIntoConstraints="NO" id="qaJ-Er-P0r" userLabel="7">
+                                <rect key="frame" x="77" y="495" width="43" height="43"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="notcomplete" translatesAutoresizingMaskIntoConstraints="NO" id="qqb-2u-RzE" userLabel="8">
+                                <rect key="frame" x="139" y="495" width="43" height="43"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="notcomplete" translatesAutoresizingMaskIntoConstraints="NO" id="gKx-f9-NXM" userLabel="9">
+                                <rect key="frame" x="200" y="495" width="43" height="43"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="notcomplete" translatesAutoresizingMaskIntoConstraints="NO" id="Lnl-sG-hlI" userLabel="10">
+                                <rect key="frame" x="257" y="495" width="43" height="43"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="912-rW-MjI" userLabel="Set">
+                                <rect key="frame" x="104" y="135" width="121" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
@@ -223,7 +266,18 @@
                     <connections>
                         <outlet property="animationImageView" destination="gLy-Gr-ZsS" id="KoF-ih-Fkg"/>
                         <outlet property="countDownLabel" destination="p92-tY-BaF" id="nk7-64-EBR"/>
+                        <outlet property="indicator1" destination="Fco-C6-j3I" id="lQJ-1P-UpO"/>
+                        <outlet property="indicator10" destination="Lnl-sG-hlI" id="QOY-KF-pU3"/>
+                        <outlet property="indicator2" destination="QOH-7R-boc" id="OYo-8m-x1e"/>
+                        <outlet property="indicator3" destination="pgv-xF-vLj" id="kCH-FR-afu"/>
+                        <outlet property="indicator4" destination="ygR-zA-maq" id="noR-E2-ly4"/>
+                        <outlet property="indicator5" destination="rve-Rb-0E1" id="fha-Rs-EaN"/>
+                        <outlet property="indicator6" destination="UU2-pV-c5k" id="on9-I6-aGM"/>
+                        <outlet property="indicator7" destination="qaJ-Er-P0r" id="0mx-9s-mva"/>
+                        <outlet property="indicator8" destination="qqb-2u-RzE" id="iDh-kc-a6Y"/>
+                        <outlet property="indicator9" destination="gKx-f9-NXM" id="rKx-dY-2sA"/>
                         <outlet property="pause" destination="L5K-hu-WBw" id="m4P-l3-T3q"/>
+                        <outlet property="setLabel" destination="912-rW-MjI" id="GcA-I1-8YI"/>
                         <outlet property="workTitle" destination="3yu-TX-MSZ" id="Dgh-Yp-pmu"/>
                     </connections>
                 </viewController>
@@ -277,7 +331,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LzG-bb-7Eh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5" y="875"/>
+            <point key="canvasLocation" x="-27" y="857"/>
         </scene>
         <!--Targeted List-->
         <scene sceneID="sFk-z9-7aZ">
@@ -325,7 +379,13 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" id="Pyl-hZ-sPV"/>
+                    <navigationItem key="navigationItem" id="Pyl-hZ-sPV">
+                        <barButtonItem key="rightBarButtonItem" title="Item" id="De2-y3-0DF">
+                            <connections>
+                                <segue destination="L1Z-ts-MKY" kind="push" identifier="toTargetedWork" id="NfZ-nU-Ahr"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <size key="freeformSize" width="320" height="568"/>
                     <connections>
@@ -416,12 +476,12 @@
         <image name="back" width="15" height="26"/>
         <image name="focus main" width="277" height="13"/>
         <image name="menu" width="34" height="21"/>
+        <image name="notcomplete" width="42" height="43"/>
         <image name="or" width="74" height="29"/>
         <image name="pause" width="128" height="127"/>
         <image name="skip" width="15" height="26"/>
         <image name="start main" width="281" height="70"/>
         <image name="startreflection" width="279" height="26"/>
-        <image name="timerback" width="128" height="127"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
@@ -429,6 +489,7 @@
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="pAy-nW-tcC"/>
+        <segue reference="w3V-v8-Lj6"/>
+        <segue reference="R4Q-1l-be7"/>
     </inferredMetricsTieBreakers>
 </document>
