core data is working

--- a/GET FIT/GET FIT/Base.lproj/Main.storyboard
+++ b/GET FIT/GET FIT/Base.lproj/Main.storyboard
@@ -588,7 +588,7 @@
                                 <rect key="frame" x="134" y="234" width="122" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" keyboardType="numberPad" keyboardAppearance="light"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W2U-Q2-32P">
                                 <rect key="frame" x="137" y="339" width="37" height="30"/>
@@ -597,7 +597,8 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="MIh-ff-Qzd" kind="unwind" identifier="toTracking" unwindAction="done:" id="CwH-Iy-WWL"/>
+                                    <action selector="onClick:" destination="fo0-kg-tY2" eventType="touchUpInside" id="zp5-Le-DnW"/>
+                                    <segue destination="MIh-ff-Qzd" kind="unwind" unwindAction="done:" id="nZq-x5-gaz"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -605,7 +606,8 @@
                     </view>
                     <navigationItem key="navigationItem" title="Track" id="1db-mY-awa"/>
                     <connections>
-                        <outlet property="eventField" destination="dKc-Mi-Uf1" id="hyM-ja-Ffq"/>
+                        <outlet property="sizeField" destination="Oy5-Ez-IHJ" id="eVF-Zh-L6n"/>
+                        <outlet property="weightField" destination="dKc-Mi-Uf1" id="BdP-6T-X8Q"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SuF-ac-ZWj" userLabel="First Responder" sceneMemberID="firstResponder"/>
